hphp/hack/test/typecheck/coeffects/local/output.php.exp
File "output.php", line 3, characters 20-38:
Direct references to coeffects namespaces are not allowed (Parsing[1002])
File "output.php", line 9, characters 3-6:
`echo` or `print` builtin requires the capability IO, which is not provided by the context. (Typing[4401])
  File "output.php", line 8, characters 23-24:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "output.php", line 10, characters 3-6:
`echo` or `print` builtin requires the capability IO, which is not provided by the context. (Typing[4401])
  File "output.php", line 8, characters 23-24:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "output.php", line 14, characters 3-6:
`echo` or `print` builtin requires the capability IO, which is not provided by the context. (Typing[4401])
  File "output.php", line 13, characters 24-34:
  The local (enclosing) context provides the capability WriteProperty
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
